# ec-crypto-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: eth_pairings.rs  pairing_ce.rs
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deps.sh  main.cpp
golang/: gnark_bench_test.go  go.mod  main.go
rust/: Cargo.toml
rust/benches/: ark.rs  eth_pairings.rs  pairing_ce.rs
src/: main.rs
