[package]
name = "ec-crypto-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bn = "0.4.2"
num-bigint = "0.4.3"
eth_pairings = { git = "https://github.com/matter-labs/eip1962", rev = "d0569953ec76aeb3a23d401b6693532060e408d6" }
criterion = { version = "0.3", features = ["html_reports"] }
pairing_ce = { git = "https://github.com/ConsenSys/pairing", features = ["asm"] }
#pairing_ce = { git = "https://github.com/ConsenSys/pairing" }
ark-ff = "0.3"
ark-ec = "0.3"
ark-bn254 = { version = "0.3", features = ["std"]}

[[bench]]
name = "bn"
harness = false
path = "benches/pairing_ce.rs"


[[bench]]
name = "eth_pairings"
harness = false
path = "benches/eth_pairings.rs"

[[bench]]
name = "ark"
harness = false
path = "benches/ark.rs"

